--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
 <body>
  <div class="book">
   <div class="content">
-   <div>
-    <img src="img/scotch.png" class="right"/>
+   <div class="clearfix">
+    <img src="img/scotch.png" class="right scotchright"/>
    </div>
    <div class="clearfix">
+    <div class="left scotchleft">
+      <img src="img/scotch.png" class="scotchleft"/>
+    </div>
     <div class="left">
      <div>
-      <img src="img/logo.png" />
+      <img src="img/logo.png" class="logo"/>
      </div>
      <div>
-      <img src="img/l_entry.png" />
+      <img src="img/l_entry.png" class="link"/>
      </div>
     </div>
     <div class="left">
-     <img src="img/bike.png" width="350" height="500"/>
+     <img src="img/bike.png" class="bike" width="350" height="500"/>
     </div>
-   </div>
-   <div>
-    <img src="img/scotch.png" />
    </div>
   </div>
  </div>  
