--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <head>
   <link href="css/common.css" type="text/css" rel="stylesheet" />
   <link href="css/index.css" type="text/css" rel="stylesheet" />
+  <script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+       $("#book").animate({left:"12%"},"slow","linear",function(){
+         $(".content").slideDown(2000);  
+       });
+    });
+  </script>
 </head>
 <body>
- <div class="book">
+ <div id="book" class="book">
   <div class="content">
    <div class="clearfix">
     <img src="img/scotch.png" class="right scotchright"/>
